--- a/index.css
+++ b/index.css
@@ -32,7 +32,11 @@ nav{
     width: 100%;
 }
  */
-.tagline{
+.tag{
+    width: 100%;
+    height: 400px;
+}
+ .tagline{
     padding-top: 350px;
     font-size: 50px;
 }
@@ -275,19 +279,28 @@ footer{
         display: none;
         margin-left: 0;
     }
-    .home,.tagline{
-        width: 500px;
+    .home,#p1,.tag{
+        width: 1000px;
         height: 600px;
-        margin-left: 50px;
+        margin-left: 100px;
+       
+    }
+    #p1,#type{
+        font-size: 60px;
     }
     #li2{
         display: block;
         justify-content: space-between;
         margin-left: 380px;
     }
+    .bodybg{
+        margin-top: 900px;
+        width: 1500px;
+        height: 400px;
+    }
     .box{
         width: 100%;
-        height: 700px;
+        height: 300px;
         margin-left: 20px;
     }
     .cakes{
@@ -296,12 +309,12 @@ footer{
         flex-wrap: wrap;
     }
     
-    .bodybg{
-        width: 100%;
-        height: 500px;
-    }
     .logo{
         width: 10px;
         height: 10px;
+    }
+    footer{
+        width: 1500px;
+        margin-top: 2000px;
     }
 }
